# jsonrmc

./: setup.cfg
jsonrmc/: __init__.py  client.py  jsonrmc.py  server.py
