[metadata]
name = jsonrmc
version = 0.1
summary = A simple python library for remote method calling with JSON-RMC
download_url = UNKNOWN
author = Krotton (Enves)
author_email = enves@enves.pl
classifier = License :: OSI Approved :: BSD License
    Development Status :: 3 - Alpha

[files]
packages = jsonrmc
